--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cycles",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,23 +12,43 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.17",
+    "@faker-js/faker": "^8.4.1",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@next/env": "^14.2.3",
+    "@sabinmarcu/eslint-config": "^1.0.3",
     "@simplewebauthn/browser": "^10.0.0",
     "@simplewebauthn/server": "^10.0.0",
     "@simplewebauthn/types": "^10.0.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@vercel/kv": "^1.0.1",
+    "autoprefixer": "^10.4.19",
+    "consola": "^3.2.3",
+    "daisyui": "^4.11.1",
+    "dotenv-cli": "^7.4.2",
+    "firebase": "^10.12.0",
+    "jose": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "postcss": "^8.4.38",
+    "ramda": "^0.30.0",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
+    "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
+    "type-fest": "^4.18.2",
     "zod": "^3.23.7"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3",
     "@types/node": "^20.12.11",
+    "@types/ramda": "^0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^34.1.9"
   }
 }
