feat: register, login and logout done

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     "unicorn/prevent-abbreviations": [
       "error",
       {
-        "ignore": "[rR]ef$"
+        "ignore": [ "[rR]ef$" ]
       }
     ]
   },
